{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 91,
  "lineage": "de578a42-82b6-97c2-d1ef-5833f5f8e1d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c45c3252f0c70214",
            "arn": "arn:aws:ec2:us-east-1:517185304724:instance/i-01580c3e14e1f5467",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01580c3e14e1f5467",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "recovery",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b64ba8a10a4d9330",
            "private_dns": "ip-192-168-1-174.ec2.internal",
            "private_ip": "192.168.1.174",
            "public_dns": "ec2-44-195-26-7.compute-1.amazonaws.com",
            "public_ip": "44.195.26.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08620aa02cdf72b00",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eba4755686e2dafa",
            "tags": {
              "Name": "ion-WebApp1-Jayant12"
            },
            "tags_all": {
              "Name": "ion-WebApp1-Jayant12"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09a204d6f0acf629c"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_security_group.WebServer",
            "aws_subnet.PublicAZA",
            "data.aws_ami.ion_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517185304724:internet-gateway/igw-097fb0c2ebfd653cc",
            "id": "igw-097fb0c2ebfd653cc",
            "owner_id": "517185304724",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0789dd5e43a63d122"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517185304724:route-table/rtb-045a74e788d6c2ebd",
            "id": "rtb-045a74e788d6c2ebd",
            "owner_id": "517185304724",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097fb0c2ebfd653cc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Custom route"
            },
            "tags_all": {
              "Name": "Custom route"
            },
            "vpc_id": "vpc-0789dd5e43a63d122"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0013a8d42b732f5a9",
            "route_table_id": "rtb-045a74e788d6c2ebd",
            "subnet_id": "subnet-0eba4755686e2dafa"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "aws_internet_gateway.gw",
            "aws_route_table.RT",
            "aws_subnet.PublicAZA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517185304724:security-group/sg-09a204d6f0acf629c",
            "description": "ONLY HTTP CONNECTION INBOUD",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a204d6f0acf629c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "WebServer",
            "name_prefix": "",
            "owner_id": "517185304724",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServer-SG"
            },
            "tags_all": {
              "Name": "WebServer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0789dd5e43a63d122"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateAZA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517185304724:subnet/subnet-0a5a49c0346081613",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0a5a49c0346081613",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517185304724",
            "tags": {
              "Name": "2a-PrivateSubnet"
            },
            "tags_all": {
              "Name": "2a-PrivateSubnet"
            },
            "vpc_id": "vpc-0789dd5e43a63d122"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateAZB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517185304724:subnet/subnet-04b5fd257ef2e2723",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-04b5fd257ef2e2723",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517185304724",
            "tags": {
              "Name": "2b-PrivateSubnet"
            },
            "tags_all": {
              "Name": "2b-PrivateSubnet"
            },
            "vpc_id": "vpc-0789dd5e43a63d122"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicAZA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517185304724:subnet/subnet-0eba4755686e2dafa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0eba4755686e2dafa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517185304724",
            "tags": {
              "Name": "2a-PublicSubnet"
            },
            "tags_all": {
              "Name": "2a-PublicSubnet"
            },
            "vpc_id": "vpc-0789dd5e43a63d122"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicAZB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517185304724:subnet/subnet-0699a35bb22bf0163",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0699a35bb22bf0163",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517185304724",
            "tags": {
              "Name": "2b-PublicSubnet"
            },
            "tags_all": {
              "Name": "2b-PublicSubnet"
            },
            "vpc_id": "vpc-0789dd5e43a63d122"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517185304724:vpc/vpc-0789dd5e43a63d122",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00d75b6d8a0f32bfa",
            "default_route_table_id": "rtb-0497e6b2cb09eb3e1",
            "default_security_group_id": "sg-03db4fce04dbde4c2",
            "dhcp_options_id": "dopt-c9ac9fb3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0789dd5e43a63d122",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0497e6b2cb09eb3e1",
            "owner_id": "517185304724",
            "tags": {
              "Name": "ion-vpc"
            },
            "tags_all": {
              "Name": "ion-vpc"
            }
          }
        }
      ]
    }
  ]
}